--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.codingame.game</groupId>
-	<artifactId>labyrinth</artifactId>
+	<artifactId>Xmas-Rush</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
     <properties>
